--- a/package.json
+++ b/package.json
@@ -12,13 +12,14 @@
   "dependencies": {
     "@react-hook/window-size": "^3.1.1",
     "canvas-confetti": "^1.9.3",
-    "react": "^19.0.0",
+    "react": "^18.3.1",
     "react-confetti": "^6.4.0",
     "react-custom-roulette": "^1.4.1",
-    "react-dom": "^19.0.0"
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
+    "@types/canvas-confetti": "^1.9.0",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
     "@vitejs/plugin-react": "^4.3.4",
